# ransebao-product-studio

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py
adapters/image/: README.md  __init__.py  dreamina_cli.py  nano_banana_pro.py
adapters/news/: README.md  __init__.py  google_news.py
adapters/publish/: README.md  __init__.py  account_registry.py  douyin_cli.py  douyin_video_cli.py  video_publish_common.py  xiaohongshu_cli.py  xiaohongshu_video_cli.py
adapters/storage/: README.md
adapters/video/: README.md  __init__.py  dreamina_cli.py
desktop-app/: .gitignore  README.md  launch_desktop_app.sh  main.js  package-lock.json  package.json  preload.js
desktop-app/app/: README.md
desktop-app/docs/: core-split-v1.md  mac-win-collaboration-v1.md
desktop-app/scripts/: export_html_poster.js
desktop-app/src/: index.html  renderer.js  styles.css
docs/project-memory/: README.md  agent-development-rules.md  current-state.md  handoff-rules.md  local-byok-edition.md  media-generation.md  ui-style-rules.md
engine/: __init__.py  cli.py
engine/core/: __init__.py  config.py  paths.py
engine/models/: __init__.py
engine/pipelines/: __init__.py
engine/services/: __init__.py  adapter_execution.py  brief_selection.py
packaging/: .gitignore  BETA_INSTALL.md  DEPENDENCIES.md  DEV_HANDOFF_WINDOWS.md  GIT_BUNDLE_HANDOFF.md  PACKAGING_ACCEPTANCE_V1.md  README.md  WINDOWS_BETA_INSTALL.md  WINDOWS_DEV_TAKEOVER_V1.md  dependency_profiles.json
runtime/: README.md
scripts/: compose_poster_preview.py  export_poster_via_electron.js
shared/: README.md
(+58 files in other folders)
