[project]
name = "product-studio"
version = "0.1.2"
description = "Local-first workflow product shell for portable customer delivery."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
product-studio = "engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "adapters*"]
